# uae-air-defense

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy-pages.yml
assets/: index-1q_bBFIC.js  index-3zCOaDMv.js  index-BMQt0IQW.js  index-BTLIru9J.css  index-CsmzNRQf.css  index-CuZrk9j-.js  index-D45GwPh5.js  index-DFhwR-5F.js  index-DZIh_Y2M.js  index-D_noSFJJ.js  index-De7KXMfl.js  index-EirlYJqV.css  index-e8PbIUTw.js  index-j06MHQVD.js
data/: modgovae_posts_feb28_to_mar10_2026_impact.csv  modgovae_posts_feb28_to_mar23_2026_impact.csv  modgovae_posts_impact.csv  modgovae_urls_2026-03-25_2026-03-25.txt  modgovae_urls_2026-03-26_2026-03-27.txt  modgovae_urls_2026-04-01_2026-04-02.txt  raw_modgovae_2026-03-25_2026-03-25.csv  raw_modgovae_2026-03-26_2026-03-27.csv  raw_modgovae_2026-04-01_2026-04-02.csv
scripts/: build_raw_from_urls.py  scrape_instagram.py
skills/update-modgovae-impact-csv/: SKILL.md
skills/update-modgovae-impact-csv/scripts/: append_modgovae_impact.py
src/: App.jsx
src/lib/: dashboardData.js
src/uae_defense/: __init__.py  cli.py  scraper.py  url_ingest.py
tests/: test_scraper.py  test_url_ingest.py
